CMAKE_MINIMUM_REQUIRED (VERSION 3.1.3)
PROJECT (libslave)

OPTION (BUILD_STATIC "Force building static library" ON)
OPTION (WITH_TESTING "Enable building the tests framework" OFF)

SET (THREADS_PREFER_PTHREAD_FLAG ON)
FIND_PACKAGE (Threads REQUIRED)

# Build flags
SET (CMAKE_CXX_STANDARD 14)
SET (CMAKE_CXX_STANDARD_REQUIRED TRUE)
SET (CMAKE_CXX_EXTENSIONS FALSE)

IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU"
 AND CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.9)
    MESSAGE (FATAL_ERROR "libslave requires GCC version >= 4.9 for proper regex support")
ENDIF ()

IF (CMAKE_CXX_COMPILER_ID STREQUAL "GNU"
 OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    # Common options
    ADD_DEFINITIONS (-pipe)
    ADD_DEFINITIONS (-Wall)
ENDIF ()

SET (LINK_TYPE STATIC)
SET (MYSQL_LIBS mysqlclient binlogevents -lssl -lcrypto)
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    LIST (APPEND MYSQL_LIBS ${CMAKE_DL_LIBS})
endif ()
MESSAGE (STATUS "Build ${LINK_TYPE} slave library")

FILE (GLOB HDR "*.h")
INSTALL (FILES ${HDR} DESTINATION include)
AUX_SOURCE_DIRECTORY (${CMAKE_CURRENT_SOURCE_DIR} SRC)

INCLUDE (FindPkgConfig)
PKG_CHECK_MODULES (LIBMYSQLCLIENT REQUIRED mysqlclient)

# Source: https://github.com/vozbu/libslave/blob/master/CMakeLists.txt

LINK_DIRECTORIES (${LIBMYSQLCLIENT_LIBRARY_DIRS})
ADD_LIBRARY (slave ${LINK_TYPE} ${SRC})
TARGET_LINK_LIBRARIES (slave PUBLIC ${LIBMYSQLCLIENT_LIBRARIES} ${MYSQL_LIBRARIES} ssl crypto Threads::Threads m rt dl)
TARGET_INCLUDE_DIRECTORIES (slave PUBLIC ${LIBMYSQLCLIENT_INCLUDE_DIRS})
#TARGET_INCLUDE_DIRECTORIES (slave PUBLIC
#        ${MYSQL_BIN}/include
#        ${MYSQL_SRC}
#        ${MYSQL_SRC}/include
#        ${MYSQL_SRC}/libbinlogevents/export
#        ${BOOST_DIR}/boost_1_70_0
#        )
INSTALL (TARGETS slave DESTINATION lib64)

IF (WITH_TESTING)
    IF (Boost_FOUND)
        ENABLE_TESTING ()
    ENDIF()
    ADD_SUBDIRECTORY (test)
ENDIF()
